# adb-rs

adb-cli/: Cargo.toml
adb-rs/: Cargo.toml
adb-rs/src/: client.rs  lib.rs  pubkey.rs  push.rs  result.rs  shell.rs  sync.rs  utils.rs
adb-rs/src/message/: connect.rs  mod.rs
