[package]
name = "adb-rs"
version = "0.1.3"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2021"
description = "Android Debug Bridge (adb) client library."
license = "MIT"
repository = "https://github.com/fluxxu/adb-rs"
documentation = "https://docs.rs/adb-rs/"
keywords = ["adb"]
homepage = "https://github.com/fluxxu/adb-rs"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
crossbeam-channel = "0.5.4"
log = "0.4.16"
num-bigint-dig = "0.8.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
rsa = "0.6.1"
thiserror = "1.0.30"

[dev-dependencies]
env_logger = "0.9.0"
